--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "balloon-css": "^1.2.0",
+    "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
