--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-material-ui-carousel": "^3.4.2",
