--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "balloon-css": "^1.2.0",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.2.10",
     "gsap": "^3.12.5",
     "intersection-observer": "^0.12.2",
